not needed but good for ref/ingress-routes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-routes
spec:
  rules:
    - host: apache.rurich.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apache
                port:
                  number: 80
    - host: echo.rurich.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: echo
                port:
                  number: 80
